<resources>

    <!-- значения для кнопки бургера-->
    <string name="nav_opened">nav_opened</string>
    <string name="nav_closed">nav_closed</string>


    <string name="app_name">ТСД от КБС41</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qty">Кол-во</string>
    <string name="title_activity_assembly_order">AssemblyOrderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="assembly_order_main">ГЛАВНОЕ</string>
    <string name="assembly_order_goods">ТОВАРЫ</string>
    <string name="number_symbol">№</string>
    <string name="date_number">Номер и дата</string>
    <string name="contractor">Контрагент</string>
    <string name="from">от</string>
    <string name="collected">Собрано:</string>
    <string name="out_of">из</string>
    <string name="assembly_order_stamps">МАРКИ</string>
    <string name="title_activity_stamps_reading">StampsReading</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="information">ИНФО</string>
    <string name="assembly_orders">Заказы на сборку</string>
    <string name="settings">Настройки</string>
    <string name="settings_name">Наименование настройки</string>
    <string name="server_address">Адрес сервера</string>
    <string name="server_port">Порт</string>
    <string name="user">Пользователь</string>
    <string name="use_https">Использовать HTTPS</string>
    <string name="password">Пароль</string>
    <string name="documents">Документы</string>
    <string name="menu_orders">Заказы</string>
    <string name="menu_scanning">Сканирование</string>
    <string name="catalogs">Справочники</string>
    <string name="goods">Товары</string>
    <string name="barcodes">Штрихкоды</string>
    <string name="contractors">Контрагенты</string>
    <string name="tools">Инструменты</string>
    <string name="delete">удалить</string>
    <string name="принять">accept</string>
    <string name="products_not_collected">СОБРАН НЕ ВЕСЬ ТОВАР!</string>
    <string name="please_enter_password_for_settings">Введите пароль для доступа к настройкам</string>
    <string name="accept">Принять</string>
    <string name="title_activity_simple_scanning_document">SimpleScanningDocument</string>
    <string name="comment">Комментарий</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="scanning">Сканирование</string>
</resources>