<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="number"
            type="String" />

        <variable
            name="date"
            type="String" />

        <variable
            name="comment"
            type="String" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvDateNumberInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/date_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvNumberSymbol"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_symbol"
                app:layout_constraintStart_toStartOf="@id/tvDateNumberInfo"
                app:layout_constraintTop_toBottomOf="@id/tvDateNumberInfo"
                tools:text="№" />

            <TextView
                android:id="@+id/tvNumber"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{number}"
                app:layout_constraintLeft_toRightOf="@id/tvNumberSymbol"
                app:layout_constraintTop_toBottomOf="@id/tvDateNumberInfo"
                tools:text="1515574" />

            <TextView
                android:id="@+id/tvFromSymbol"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/from"
                app:layout_constraintStart_toEndOf="@+id/tvNumber"
                app:layout_constraintTop_toBottomOf="@id/tvDateNumberInfo"
                tools:text="от" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{date}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvFromSymbol"
                app:layout_constraintTop_toBottomOf="@id/tvDateNumberInfo"
                tools:text="03.03.2021 18:00:03" />



            <TextView
                android:id="@+id/tvCommentInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNumberSymbol" />

            <TextView
                android:id="@+id/tvComment"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{comment}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCommentInfo"
                tools:text="Сука срочно собрать всё это говно и загрузить клиенту в его автомобиль" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>